--- a/moVirt/src/main/AndroidManifest.xml
+++ b/moVirt/src/main/AndroidManifest.xml
@@ -59,6 +59,13 @@
                 android:resource="@xml/sync_adapter" />
         </service>
 
+        <service
+            android:name=".mqtt.MqttService_"
+            android:enabled="true"
+            android:exported="true">
+
+        </service>
+
         <activity
             android:name="org.ovirt.mobile.movirt.ui.triggers.EditTriggersActivity_"
             android:label="@string/title_activity_edit_filters" >
